# dig-identity

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md  WIP.md
.github/workflows/: publish.yml
src/: bls.rs  did.rs  error.rs  hash.rs  identity_profile.rs  keys.rs  lib.rs  pairing.rs  profile.rs  proof.rs  resolve.rs  slot.rs  tree.rs  value.rs  verify.rs  xch.rs
tests/: bls_key_model.rs  format.rs  identity_profile.rs
